@@ -136,6 +136,7 @@ Copyright 1997 - July 2008 CWI, August 2008 - 2017 MonetDB B.V.
     <antcall target="BugResultSetMetaData_Bug_6183" />
     <antcall target="Bug_PrepStmtSetObject_CLOB_6349" />
     <antcall target="Bug_Connect_as_voc_getMetaData_Failure_Bug_6388" />
+    <antcall target="Bug_PrepStmtSetString_6382" />
   </target>
 
   <target name="test_class" depends="compile,jdbc">
@@ -394,6 +395,12 @@ Copyright 1997 - July 2008 CWI, August 2008 - 2017 MonetDB B.V.
   <target name="Bug_Connect_as_voc_getMetaData_Failure_Bug_6388">
     <antcall target="test_class">
       <param name="test.class" value="Bug_Connect_as_voc_getMetaData_Failure_Bug_6388" />
+    </antcall>
+  </target>
+
+  <target name="Bug_PrepStmtSetString_6382">
+    <antcall target="test_class">
+      <param name="test.class" value="Bug_PrepStmtSetString_6382" />
     </antcall>
   </target>
 
